# ai-ddts

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  message-api.md  pyproject.toml  requirements.txt  test2.py  技术方案.md
.claude/: settings.local.json
application/: __init__.py  api_service.py  config_service.py  exception_order_store.py  execution_log_store.py  file_generator.py  manual_runner.py  order_splitter.py  payment_receipt_store.py  pipeline.py  pushed_order_store.py  scheduler.py  scheduler_loop.py  sku_group_map.py  special_push_order_store.py  supplier_mapping_store.py  task_code.py  task_run_store.py  task_service.py  temp_push_runner.py  xlsx_reader.py
config/: a  config copy.json  config new copy 2.json  config.dev.json  config.json  config1.json  config_prod.json  config_success.json  config_test.json
demo/: demo_xlsx_parser.py  test.xlsx  wecom_sender_demo.py  限发区域产品.xls
domain/: __init__.py  exception_order.py  rule_engine.py  sku_group_info.py  supplier.py
infrastructure/: __init__.py  cloud_warehouse_client.py  db_to_xlsx.py  demo.py  file_upload_client.py  jikeyun_client.py  kingdee_service.py  message_adapter.py  product_caller_sync_client.py  qixin_client.py  xlsx_region_parser.py  xlsx_sku_group_parser.py  xlsx_sku_parser.py
input/: _debug_headers.txt  _debug_rules.txt  _filter_result.txt  销售单查询.xlsx  销售单查询.xlsx.cache.json
interfaces/: __init__.py  app.py
scripts/: clear_task_data.py  csv_to_xlsx.py  manual_push_group.py
shared/: __init__.py  env.py
tests/: __init__.py  test_config_service.py  test_db_to_xlsx.py  (+35 more)
(+24 files in other folders)
